--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,6 +14,7 @@
     "import json\n",
     "import jellyfish\n",
     "import numpy as np\n",
+    "import os\n",
     "\n",
     "\n"
    ]
@@ -622,8 +623,10 @@
     "\n",
     "llama1_3_data_dict = {}\n",
     "\n",
+    "\n",
     "for file_name, var_name in zip(file_names, variable_names):\n",
-    "    with open(file_name, \"r\") as file:\n",
+    "    path_to_file = os.path.join(\"experiment_data\", file_name)\n",
+    "    with open(path_to_file, \"r\") as file:\n",
     "        data_list = json.load(file)\n",
     "        llama1_3_data_dict[var_name] = data_list\n",
     "\n",
@@ -688,7 +691,8 @@
     "llama2_7_data_dict = {}\n",
     "\n",
     "for file_name, var_name in zip(file_names, variable_names):\n",
-    "    with open(file_name, \"r\") as file:\n",
+    "    path_to_file = os.path.join(\"experiment_data\", file_name)\n",
+    "    with open(path_to_file, \"r\") as file:\n",
     "        data_list = json.load(file)\n",
     "        llama2_7_data_dict[var_name] = data_list\n",
     "\n",
