adding some data

--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -14,9 +14,7 @@
     "import json\n",
     "import jellyfish\n",
     "import numpy as np\n",
-    "import os\n",
-    "\n",
-    "\n"
+    "import os\n"
    ]
   },
   {
